--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
     </dependency>
     <!-- log end -->
 	
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.14</version>
+	</dependency>
+	
   </dependencies>
   
   
